src/test/ui/error-codes/E0063.stderr
error[E0063]: missing field `x` in initializer of `SingleFoo`
  --> $DIR/E0063.rs:42:13
   |
LL |     let w = SingleFoo { };
   |             ^^^^^^^^^ missing `x`

error[E0063]: missing fields `y`, `z` in initializer of `PluralFoo`
  --> $DIR/E0063.rs:44:13
   |
LL |     let x = PluralFoo {x: 1};
   |             ^^^^^^^^^ missing `y`, `z`

error[E0063]: missing fields `a`, `b`, `y` and 1 other field in initializer of `TruncatedFoo`
  --> $DIR/E0063.rs:46:13
   |
LL |     let y = TruncatedFoo{x:1};
   |             ^^^^^^^^^^^^ missing `a`, `b`, `y` and 1 other field

error[E0063]: missing fields `a`, `b`, `c` and 2 other fields in initializer of `TruncatedPluralFoo`
  --> $DIR/E0063.rs:48:13
   |
LL |     let z = TruncatedPluralFoo{x:1};
   |             ^^^^^^^^^^^^^^^^^^ missing `a`, `b`, `c` and 2 other fields

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0063`.
